<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentRecruitmentRequestDetails">
    <data>
        <variable name="requestVM" type="com.example.sep.viewModel.recruitmentRequestVM.RecruitmentRequestViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rec_request_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recruitment_request_details"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TableLayout
            android:id="@+id/table_rec_request_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rec_request_details">

            <TableRow
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_event_id_rec_view"
                    android:text="@string/event_id"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_event_id_rec_view2"
                    android:text="@{String.valueOf(requestVM.request.eventId)}"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_department_res_view"
                    android:text="@string/requesting_department"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_department_res_view2"
                    android:text="@{requestVM.request.requestingDepartment}"
                    android:padding="4dp"/>

            </TableRow>
            <TableRow
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_contract_type_rec_view"
                    android:text="@string/contract_type"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_contract_type_rec_view2"
                    android:text="@{requestVM.request.contractType}"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_job_title_view"
                    android:text="@string/job_title"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_job_title_view2"
                    android:text="@{requestVM.request.jobTitle}"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_years_of_experience_view"
                    android:text="@string/years_of_experience"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_years_of_experience_view2"
                    android:text="@{requestVM.request.yearsOfExperience}"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_job_description_view"
                    android:text="@string/description"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_job_description_view2"
                    android:text="@{requestVM.request.jobDescription}"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_approved_by_fin_view"
                    android:text="@string/status"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_approved_by_fin_view2"
                    android:text="@{requestVM.request.status}"
                    android:padding="4dp"/>

            </TableRow>


        </TableLayout>

        <!-- view for financial department -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rec_request_details_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toStartOf="@id/btn_rec_request_details_approve"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/table_rec_request_details"
            app:cornerRadius="20dp"
            android:backgroundTint="?colorSecondary"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_rec_request_details_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approve"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_rec_request_details_delete"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/table_rec_request_details"
            app:cornerRadius="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>